# rockband-guitar-usb-and-xbox-rf-module

./: .gitmodules  LICENSE  README.md
hid/: CMakeLists.txt  MakeFile  main.c  make.mk  readme.md  tusb_config.h  usb_descriptors.c  usb_descriptors.h
mini-controller/: CMakeLists.txt  readme.md
